--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,16 @@
 apply plugin: 'com.android.library'
-//apply plugin: 'maven'
-//apply plugin: 'signing'
+apply from: file('../deploy_sonatype.gradle')
 
 android {
-    compileSdkVersion 10
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 21
+    buildToolsVersion "21.1.1"
 
     defaultConfig {
         minSdkVersion 1
-        targetSdkVersion 10
+        targetSdkVersion 21
 
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
     }
     buildTypes {
         release {
@@ -20,60 +19,4 @@ android {
         }
     }
 }
-//
-//
-//version = "1.0.0"
-//group = "com.eden"
-//
-//configurations {
-//    archives {
-//        extendsFrom configurations.default
-//    }
-//}
-//
-//signing {
-//    required { has("release") && gradle.taskGraph.hasTask("uploadArchives") }
-//    sign configurations.archives
-//}
-//
-//uploadArchives {
-//    configuration = configurations.archives
-//    repositories.mavenDeployer {
-//        beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-//
-//        repository(url: sonatypeRepo) {
-//            authentication(userName: sonatypeUsername,
-//                    password: sonatypePassword)
-//        }
-//
-//        pom.project {
-//            name 'Android Cache Library'
-//            packaging 'aar'
-//            description 'Cache library for Android applications'
-//            url 'https://github.com/VandalSoftware/android-cache-lib'
-//
-//            scm {
-//                url 'scm:git@github.com:VandalSoftware/android-cache-lib.git'
-//                connection 'scm:git@github.com:VandalSoftware/android-cache-lib.git'
-//                developerConnection 'scm:git@github.com:VandalSoftware/android-cache-lib.git'
-//            }
-//
-//            licenses {
-//                license {
-//                    name 'The Apache Software License, Version 2.0'
-//                    url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-//                    distribution 'repo'
-//                }
-//            }
-//
-//            developers {
-//                developer {
-//                    id 'jle'
-//                    name 'Jonathan Le'
-//                    email 'jonathanle@gmail.com'
-//                }
-//            }
-//        }
-//    }
-//}
 
